# render

./: CMakeLists.txt  bad_cfg_fmt.txt  bad_cfg_key.txt  build-clang.txt  build-gcc.txt  cfg.txt  cfg2.txt  cfg_bad.txt  cfg_bad_fmt.txt  cfg_bad_key.txt  cfg_bad_tr.txt  cfg_ok.txt  cfg_ok2.txt  cov-test.txt  cov_cfg.txt  cov_scene.txt  coverage.camera.cpp.727d1b623b8bf34765330a6b30ca678a.html  coverage.camera.hpp.da999ecbd52312fae31c69d9015aa2b8.html  coverage.functions.html  coverage.hits.cpp.14041c8b3a405f5b71e1ab4a8531ff47.html  coverage.html  coverage.image_aos.hpp.1114a142d43e86e5058d805854d04ff8.html  coverage.image_soa.hpp.af390a7c32c8755de6ad993c8be3655b.html  coverage.main.cpp.01555d7c0dbd96cf5bb0782195bceaad.html  coverage.main.cpp.92fe1a4b7d504a4ec2d4d935af0e59f8.html  coverage.parser.cpp.daa5eb3bd8d5e4d0b71c5d90b7bd223d.html  coverage.ppm.cpp.86bcb6240fb5a7e95f0d4f67680bd2dc.html  coverage.ray.hpp.fb9d978f83cea7bd33658f4705696b2c.html  coverage.scene.cpp.c1ead6c1404b3d61e5f878bed9349844.html  coverage.txt  coverage.vector.hpp.1d6b41bb62cf722c4b38d0ffc28a0cee.html  ftest.sh  out_aos.ppm  out_cov_soa.ppm  out_soa.ppm  out_soak.ppm  render-aos  render-soa  scene.txt  scene_bad.scn  (+14 more)
aos/include/render/: image_aos.hpp
aos/src/: image_aos.cpp  main.cpp
common/: CMakeLists.txt  CMakeLists.txt.bak
common/include/common/: camera.hpp  ray.hpp  vector.hpp
common/include/render/: camera.hpp  config.hpp  hits.hpp  parser.hpp  ppm.hpp  ray.hpp  scene.hpp  vector.hpp
common/src/: camera.cpp  config.cpp  hits.cpp  parser.cpp  parser.cpp.bak  ppm.cpp  scene.cpp  vector.cpp
functional/configs/: minimal.txt
functional/scenes/: minimal.txt
scripts/: build_strict.sh  coverage.sh  format_check.sh  nolint_check.sh  utest.sh
soa/include/render/: image_soa.hpp
soa/src/: image_soa.cpp  main.cpp
utaos/: CMakeLists.txt  test_image_aos.cpp
utcommon/: CMakeLists.txt  test_camera.cpp  test_config.cpp  test_config.cpp.bak  test_config_extras.cpp  test_hits.cpp  test_misc.cpp  test_parser_scene.cpp  test_ppm_overloads.cpp  test_scene_parse_min.cpp  test_vector.cpp
utsoa/: CMakeLists.txt  test_image_soa.cpp
